fixed blockquote spacing

--- a/app/assets/stylesheets/global.css.scss
+++ b/app/assets/stylesheets/global.css.scss
@@ -162,7 +162,6 @@ article.link {
   blockquote {
     color:$darkgrey;
     font-style: italic;
-    margin:-15px 0;
     padding-left:15px;
     border-left:5px solid $lightgrey;
   }
